--- a/src/app/projects.json
+++ b/src/app/projects.json
@@ -1667,7 +1667,7 @@
     "category": "Commercial",
     "location": "DHA, Multan",
     "description":
-      "",
+      "This plaza reflects a sleek modern style with clean vertical lines, expansive glass facades, and warm wooden accents. Its balanced composition of textures and lighting creates a contemporary commercial landmark.",
     "preview": "/projects/Plaza_4_Marla/2.webp",
     "images": [
         { "url": "/projects/Plaza_4_Marla/1.webp" },
@@ -1682,7 +1682,7 @@
     "category": "Commercial",
     "location": "Dream Garden, Multan",
     "description":
-      "",
+      "This plaza features a bold contemporary style with a striking patterned façade and expansive glass storefronts. The sleek symmetry, accent lighting, and palm-lined frontage add a touch of modern elegance.",
     "preview": "/projects/10_Marla_Plaza/2.webp",
     "images": [
         { "url": "/projects/10_Marla_Plaza/1.webp" },
@@ -1727,7 +1727,7 @@
     "category": "Educational",
     "location": "Multan",
     "description":
-      "",
+      "The Zia-Ul-Uloom Islamic & Arabic Educational Institute showcases a harmonious blend of traditional Islamic architecture with modern design elements. Featuring red brick facades, domes, arches, and a central clock tower, it reflects a timeless scholarly elegance.",
     "preview": "/projects/Zia_Ul_Uloom_University/1.webp",
     "images": [
         { "url": "/projects/Zia_Ul_Uloom_University/1.webp" }
@@ -1755,7 +1755,7 @@
     "category": "Commercial",
     "location": "Multan",
     "description":
-      "",
+      "This 5 Marla office-home hybrid features a sleek, contemporary design with minimalist lines, metallic accents, and a bold black-and-white palette. Seamlessly blending functionality and style, it offers a professional workspace at the front with a private residential area behind.",
     "preview": "/projects/Office_5_Marla/1.webp",
     "images": [
         { "url": "/projects/Office_5_Marla/1.webp" }
