--- a/src/app/projects.json
+++ b/src/app/projects.json
@@ -527,7 +527,7 @@
     "icon": "/icon4.webp",
     "year": 2024,
     "category": "Restaurants",
-    "location": "Butch Villas, Multan",
+    "location": "Buch Villas, Multan",
     "description":
       "KFC restaurant design features a modern, sleek facade with bold red accents, illuminated signage, and a contemporary, inviting structure that emphasizes the brand's signature aesthetic.",
     "preview": "/projects/Kfc_Buch_Villas/2.webp",
@@ -545,7 +545,7 @@
     "icon": "/icon4.webp",
     "year": 2023,
     "category": "Educational",
-    "location": "Butch Villas, Multan",
+    "location": "Buch Villas, Multan",
     "description":
       "Bloomfield School is a modern, stylish educational institution with a sleek, geometric facade and a welcoming entrance.",
     "preview": "/projects/Bloomfield_School_Buch_Villas/1.webp",
@@ -909,7 +909,7 @@
     "id": 44,
     "title": "1 KANAL RESIDENTIAL (Plot N-759) AMBIENCE",
     "icon": "/icon4.webp",
-    "year": 2024,
+    "year": 2025,
     "category": "Residential",
     "location": "DHA, Multan",
     "description":
