--- a/src/app/projects.json
+++ b/src/app/projects.json
@@ -883,7 +883,8 @@
       "Noman Sahab living in this stunning 1 Kanal home in Multan, offering Classical design, spacious interiors, and premium amenities.",
     "preview": "/projects/744-Q_Noman_1_Kanal/1.webp",
     "images": [
-        { "url": "/projects/744-Q_Noman_1_Kanal/1.webp" }
+        { "url": "/projects/744-Q_Noman_1_Kanal/1.webp" },
+        { "url": "/projects/744-Q_Noman_1_Kanal/2.webp" }
     ]
   },
   {
