--- a/src/app/projects.json
+++ b/src/app/projects.json
@@ -1148,7 +1148,7 @@
     "category": "Residential",
     "location": "Royal Orchard, Multan",
     "description":
-      "Tariq Sahab living in this stunning 1 Kanal home in DHA Multan, offering modern design, spacious interiors, and premium amenities.",
+      "Tariq Sahab living in this stunning 1 Kanal home in Multan, offering modern design, spacious interiors, and premium amenities.",
     "preview": "/projects/Tariq_1_Kanal/2.webp",
     "images": [
         { "url": "/projects/Tariq_1_Kanal/1.webp" },
