--- a/src/app/projects.json
+++ b/src/app/projects.json
@@ -1077,7 +1077,36 @@
     "preview": "/projects/Anayatullah_1_Kanal/2.webp",
     "images": [
         { "url": "/projects/Anayatullah_1_Kanal/1.webp" },
-        { "url": "/projects/Anayatullah_1_Kanal/2.webp" }
+        { "url": "/projects/Anayatullah_1_Kanal/2.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/3.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/4.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/5.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/6.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/7.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/8.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/9.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/10.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/11.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/12.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/13.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/14.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/15.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/16.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/17.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/18.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/19.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/20.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/21.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/22.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/23.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/24.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/25.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/26.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/27.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/28.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/29.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/30.webp" },
+        { "url": "/projects/Anayatullah_1_Kanal/31.webp" }
     ]
   },
   {
