--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@prisma/client": "^6.16.2",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "nodemailer": "^7.0.5",
