--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-swipeable": "^7.0.2",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1"
   },
