--- a/src/app/projects.json
+++ b/src/app/projects.json
@@ -1943,6 +1943,12 @@
       },
       {
         "url": "/projects/Hassan_5_Marla/13.webp"
+      },
+      {
+        "url": "/projects/Hassan_5_Marla/14.webp"
+      },
+      {
+        "url": "/projects/Hassan_5_Marla/15.webp"
       }
     ]
   },
