--- a/src/app/projects.json
+++ b/src/app/projects.json
@@ -2241,10 +2241,13 @@
         "url": "/projects/4_Kanal/8.webp"
       },
       {
-        "url": "/projects/4_Kanal/9.jpg"
+        "url": "/projects/4_Kanal/9.webp"
       },
       {
         "url": "/projects/4_Kanal/10.webp"
+      },
+      {
+        "url": "/projects/4_Kanal/11.webp"
       }
     ]
   },
